Added Dean Martin image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="38-master_0.jpg" alt="">
     <h1>Coming soon to ... Le wagon</h1>
 </body>
 </html>
