Centered image and tagline

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="38-master_0.jpg" alt="">
-    <h1>Coming soon to ... Le wagon</h1>
+    <div id="container"><img id="logo" src="38-master_0.jpg" alt="">
+    <h1>Coming soon to ... Mark Dean Institute</h1></div>
+    
 </body>
 </html>
